cdk.out/cdk-aws-playground.template.json
{
  "Resources": {
    "vpcmainprdA833CF7D": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-aws-playground/vpc-main-prd"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/Resource"
      }
    },
    "vpcmainprdIngressSubnet1Subnet3C07097F": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/24",
        "VpcId": {
          "Ref": "vpcmainprdA833CF7D"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-aws-playground/vpc-main-prd/IngressSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/IngressSubnet1/Subnet"
      }
    },
    "vpcmainprdIngressSubnet1RouteTable700EB517": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcmainprdA833CF7D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-aws-playground/vpc-main-prd/IngressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/IngressSubnet1/RouteTable"
      }
    },
    "vpcmainprdIngressSubnet1RouteTableAssociation9ACC51BF": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmainprdIngressSubnet1RouteTable700EB517"
        },
        "SubnetId": {
          "Ref": "vpcmainprdIngressSubnet1Subnet3C07097F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/IngressSubnet1/RouteTableAssociation"
      }
    },
    "vpcmainprdIngressSubnet1DefaultRouteA9F1F2E5": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmainprdIngressSubnet1RouteTable700EB517"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcmainprdIGWC4F87139"
        }
      },
      "DependsOn": [
        "vpcmainprdVPCGW6C2D00FC"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/IngressSubnet1/DefaultRoute"
      }
    },
    "vpcmainprdIngressSubnet1EIP13C7135D": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/IngressSubnet1/EIP"
      }
    },
    "vpcmainprdIngressSubnet1NATGatewayBFDEBB45": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "vpcmainprdIngressSubnet1EIP13C7135D",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "vpcmainprdIngressSubnet1Subnet3C07097F"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-aws-playground/vpc-main-prd/IngressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/IngressSubnet1/NATGateway"
      }
    },
    "vpcmainprdIngressSubnet2Subnet0A7783F1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "VpcId": {
          "Ref": "vpcmainprdA833CF7D"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-aws-playground/vpc-main-prd/IngressSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/IngressSubnet2/Subnet"
      }
    },
    "vpcmainprdIngressSubnet2RouteTable7490A018": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcmainprdA833CF7D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-aws-playground/vpc-main-prd/IngressSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/IngressSubnet2/RouteTable"
      }
    },
    "vpcmainprdIngressSubnet2RouteTableAssociationDEE4496A": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmainprdIngressSubnet2RouteTable7490A018"
        },
        "SubnetId": {
          "Ref": "vpcmainprdIngressSubnet2Subnet0A7783F1"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/IngressSubnet2/RouteTableAssociation"
      }
    },
    "vpcmainprdIngressSubnet2DefaultRoute5B7D2C5C": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmainprdIngressSubnet2RouteTable7490A018"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcmainprdIGWC4F87139"
        }
      },
      "DependsOn": [
        "vpcmainprdVPCGW6C2D00FC"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/IngressSubnet2/DefaultRoute"
      }
    },
    "vpcmainprdIngressSubnet2EIP0ECA5136": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/IngressSubnet2/EIP"
      }
    },
    "vpcmainprdIngressSubnet2NATGatewayA64349F5": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "vpcmainprdIngressSubnet2EIP0ECA5136",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "vpcmainprdIngressSubnet2Subnet0A7783F1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-aws-playground/vpc-main-prd/IngressSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/IngressSubnet2/NATGateway"
      }
    },
    "vpcmainprdinappSubnet1Subnet230015D9": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.2.0/24",
        "VpcId": {
          "Ref": "vpcmainprdA833CF7D"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-aws-playground/vpc-main-prd/in-appSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "in-app"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/in-appSubnet1/Subnet"
      }
    },
    "vpcmainprdinappSubnet1RouteTable6CCC0031": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcmainprdA833CF7D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-aws-playground/vpc-main-prd/in-appSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/in-appSubnet1/RouteTable"
      }
    },
    "vpcmainprdinappSubnet1RouteTableAssociation32C3037C": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmainprdinappSubnet1RouteTable6CCC0031"
        },
        "SubnetId": {
          "Ref": "vpcmainprdinappSubnet1Subnet230015D9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/in-appSubnet1/RouteTableAssociation"
      }
    },
    "vpcmainprdinappSubnet1DefaultRoute766DCBC6": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmainprdinappSubnet1RouteTable6CCC0031"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "vpcmainprdIngressSubnet1NATGatewayBFDEBB45"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/in-appSubnet1/DefaultRoute"
      }
    },
    "vpcmainprdinappSubnet2SubnetE11E258F": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.3.0/24",
        "VpcId": {
          "Ref": "vpcmainprdA833CF7D"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-aws-playground/vpc-main-prd/in-appSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "in-app"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/in-appSubnet2/Subnet"
      }
    },
    "vpcmainprdinappSubnet2RouteTable4528C6AD": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcmainprdA833CF7D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-aws-playground/vpc-main-prd/in-appSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/in-appSubnet2/RouteTable"
      }
    },
    "vpcmainprdinappSubnet2RouteTableAssociation43373C71": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmainprdinappSubnet2RouteTable4528C6AD"
        },
        "SubnetId": {
          "Ref": "vpcmainprdinappSubnet2SubnetE11E258F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/in-appSubnet2/RouteTableAssociation"
      }
    },
    "vpcmainprdinappSubnet2DefaultRouteAA844D58": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmainprdinappSubnet2RouteTable4528C6AD"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "vpcmainprdIngressSubnet2NATGatewayA64349F5"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/in-appSubnet2/DefaultRoute"
      }
    },
    "vpcmainprdindbSubnet1Subnet72554A23": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.4.0/28",
        "VpcId": {
          "Ref": "vpcmainprdA833CF7D"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-aws-playground/vpc-main-prd/in-dbSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "in-db"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/in-dbSubnet1/Subnet"
      }
    },
    "vpcmainprdindbSubnet1RouteTable9AC77218": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcmainprdA833CF7D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-aws-playground/vpc-main-prd/in-dbSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/in-dbSubnet1/RouteTable"
      }
    },
    "vpcmainprdindbSubnet1RouteTableAssociation03BD57BE": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmainprdindbSubnet1RouteTable9AC77218"
        },
        "SubnetId": {
          "Ref": "vpcmainprdindbSubnet1Subnet72554A23"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/in-dbSubnet1/RouteTableAssociation"
      }
    },
    "vpcmainprdindbSubnet2Subnet31C2F0EE": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.4.16/28",
        "VpcId": {
          "Ref": "vpcmainprdA833CF7D"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-aws-playground/vpc-main-prd/in-dbSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "in-db"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/in-dbSubnet2/Subnet"
      }
    },
    "vpcmainprdindbSubnet2RouteTableFBC526DD": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcmainprdA833CF7D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-aws-playground/vpc-main-prd/in-dbSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/in-dbSubnet2/RouteTable"
      }
    },
    "vpcmainprdindbSubnet2RouteTableAssociation96163A45": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmainprdindbSubnet2RouteTableFBC526DD"
        },
        "SubnetId": {
          "Ref": "vpcmainprdindbSubnet2Subnet31C2F0EE"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/in-dbSubnet2/RouteTableAssociation"
      }
    },
    "vpcmainprdIGWC4F87139": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-aws-playground/vpc-main-prd"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/IGW"
      }
    },
    "vpcmainprdVPCGW6C2D00FC": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpcmainprdA833CF7D"
        },
        "InternetGatewayId": {
          "Ref": "vpcmainprdIGWC4F87139"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/vpc-main-prd/VPCGW"
      }
    },
    "sageMakerdumpsBFB52D92": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "aws:kms"
              }
            }
          ]
        },
        "BucketName": "sagemakerdumps",
        "PublicAccessBlockConfiguration": {
          "RestrictPublicBuckets": true
        }
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain",
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/sageMakerdumps/Resource"
      }
    },
    "SMInstanceData": {
      "Type": "AWS::SageMaker::NotebookInstance",
      "Properties": {
        "InstanceType": "ml.t2.medium",
        "RoleArn": "sagemakerarn",
        "SubnetId": {
          "Ref": "vpcmainprdinappSubnet1Subnet230015D9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-aws-playground/SMInstanceData"
      }
    }
  }
}
